# Iris-Segmentation

./: CMakeLists.txt  README.md
header/: MaxLocation.h  irisSegmentation.h
src/: MaxLocation.cpp  irisSegmentation.cpp  main.cpp
